# PySQIF

./: AkgunThesis.docx  Figures [Autosaved].pptx  ISS2021_BiSQUID.docx  InductanceConstants.py  InputData.py  LICENSE  Main.py  Period.py  PhiExt.py  Plot.py  PySQIF.py  PySQUID.py  PySQUID_iss2021_template.docx  README.md  Rapor.docx  Rapor_SR (2).docx  Solver.py  TimeStep.py  Voltage.py  Yield.py  YieldIc3.py  Yield_class.py  abstract_en.docx  abstract_tr.docx  bisquid.m  input.csv  main.py  non-symmetric.py  notlar.txt  numerical-squid-2.py  numerical-squid.py  pysquid_test.py  requirements.txt  setup.cfg  untitled0.py
docs/: _config.yml  bi-squid_single_run.csv  index.md  index.rst  tutorials.md
docs/source/: Citing this project  Installation.rst  about.rst  citing_this_project.rst  conf.py  contact.rst  index.rst  input_text_file_format.rst  installation.rst  quantum_mechanical_current_density  quantum_mechanical_current_density.rst  report_a_bug  report_a_bug.rst  single_run_bi_squid_tutorial.rst  single_run_tutorial.rst  theory.rst  tutorials.rst
docs/tutorial_resources/: output_normalized_magnetic_flux.csv  output_voltage.csv
src/PySQIF/: InductanceConstants.py  InputData.py  Main.py  Output.py  PhiExt.py  Solver.py  Voltage.py  YieldIc3.py  output.csv  output_ic3.csv
tests/: InductanceConstantsTest.py  PhiExtTest.py  PySQIF_test.py
