[metadata]
name = PySQIF
version = 0.0.2
author = ali akgun
author_email = ali.akgunphys@gmail.com
description = Analysis library for PySQUID circuits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aakgn/PySQIF
project_urls =
    Bug Tracker = https://github.com/aakgn/PySQIF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src